// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Get Queue Limits shows statistics on queue limits 1`] = `
Object {
  "embeds": Array [
    Object {
      "description": "Use \`/cooldown\` to see your cooldown time",
      "fields": Array [
        Object {
          "name": "Number of Submissions:	infinite",
          "value": "The maximum number of submissions that each user may submit.",
        },
        Object {
          "name": "Submission Cooldown:	none",
          "value": "The minimum amount of time that each user must wait between their own submissions.",
        },
        Object {
          "name": "Min Song Length:	0",
          "value": "The minimum duration of a song submission.",
        },
        Object {
          "name": "Max Song Length:	infinite",
          "value": "The maximum duration of a song submission.",
        },
        Object {
          "name": "Total Queue Length:	infinite",
          "value": "The maximum duration that the queue should take if all its entries were played end-to-end. The queue will automatically close when a submission takes the queue over this limit.",
        },
      ],
      "title": "Queue Limits",
    },
  ],
  "ephemeral": true,
}
`;

exports[`Get Queue Limits shows statistics on queue limits 2`] = `
Object {
  "embeds": Array [
    Object {
      "description": "Use \`/cooldown\` to see your cooldown time",
      "fields": Array [
        Object {
          "name": "Number of Submissions:	infinite",
          "value": "The maximum number of submissions that each user may submit.",
        },
        Object {
          "name": "Submission Cooldown:	42 seconds",
          "value": "The minimum amount of time that each user must wait between their own submissions.",
        },
        Object {
          "name": "Min Song Length:	0",
          "value": "The minimum duration of a song submission.",
        },
        Object {
          "name": "Max Song Length:	infinite",
          "value": "The maximum duration of a song submission.",
        },
        Object {
          "name": "Total Queue Length:	infinite",
          "value": "The maximum duration that the queue should take if all its entries were played end-to-end. The queue will automatically close when a submission takes the queue over this limit.",
        },
      ],
      "title": "Queue Limits",
    },
  ],
  "ephemeral": true,
}
`;

exports[`Get Queue Limits shows statistics on queue limits 3`] = `
Object {
  "embeds": Array [
    Object {
      "description": "Use \`/cooldown\` to see your cooldown time",
      "fields": Array [
        Object {
          "name": "Number of Submissions:	infinite",
          "value": "The maximum number of submissions that each user may submit.",
        },
        Object {
          "name": "Submission Cooldown:	none",
          "value": "The minimum amount of time that each user must wait between their own submissions.",
        },
        Object {
          "name": "Min Song Length:	0",
          "value": "The minimum duration of a song submission.",
        },
        Object {
          "name": "Max Song Length:	42 seconds",
          "value": "The maximum duration of a song submission.",
        },
        Object {
          "name": "Total Queue Length:	infinite",
          "value": "The maximum duration that the queue should take if all its entries were played end-to-end. The queue will automatically close when a submission takes the queue over this limit.",
        },
      ],
      "title": "Queue Limits",
    },
  ],
  "ephemeral": true,
}
`;

exports[`Get Queue Limits shows statistics on queue limits 4`] = `
Object {
  "embeds": Array [
    Object {
      "description": "Use \`/cooldown\` to see your cooldown time",
      "fields": Array [
        Object {
          "name": "Number of Submissions:	42",
          "value": "The maximum number of submissions that each user may submit.",
        },
        Object {
          "name": "Submission Cooldown:	none",
          "value": "The minimum amount of time that each user must wait between their own submissions.",
        },
        Object {
          "name": "Min Song Length:	0",
          "value": "The minimum duration of a song submission.",
        },
        Object {
          "name": "Max Song Length:	infinite",
          "value": "The maximum duration of a song submission.",
        },
        Object {
          "name": "Total Queue Length:	infinite",
          "value": "The maximum duration that the queue should take if all its entries were played end-to-end. The queue will automatically close when a submission takes the queue over this limit.",
        },
      ],
      "title": "Queue Limits",
    },
  ],
  "ephemeral": true,
}
`;

exports[`Get Queue Limits shows statistics on queue limits 5`] = `
Object {
  "embeds": Array [
    Object {
      "description": "Use \`/cooldown\` to see your cooldown time",
      "fields": Array [
        Object {
          "name": "Number of Submissions:	infinite",
          "value": "The maximum number of submissions that each user may submit.",
        },
        Object {
          "name": "Submission Cooldown:	42 seconds",
          "value": "The minimum amount of time that each user must wait between their own submissions.",
        },
        Object {
          "name": "Min Song Length:	0",
          "value": "The minimum duration of a song submission.",
        },
        Object {
          "name": "Max Song Length:	42 seconds",
          "value": "The maximum duration of a song submission.",
        },
        Object {
          "name": "Total Queue Length:	infinite",
          "value": "The maximum duration that the queue should take if all its entries were played end-to-end. The queue will automatically close when a submission takes the queue over this limit.",
        },
      ],
      "title": "Queue Limits",
    },
  ],
  "ephemeral": true,
}
`;

exports[`Get Queue Limits shows statistics on queue limits 6`] = `
Object {
  "embeds": Array [
    Object {
      "description": "Use \`/cooldown\` to see your cooldown time",
      "fields": Array [
        Object {
          "name": "Number of Submissions:	42",
          "value": "The maximum number of submissions that each user may submit.",
        },
        Object {
          "name": "Submission Cooldown:	none",
          "value": "The minimum amount of time that each user must wait between their own submissions.",
        },
        Object {
          "name": "Min Song Length:	0",
          "value": "The minimum duration of a song submission.",
        },
        Object {
          "name": "Max Song Length:	42 seconds",
          "value": "The maximum duration of a song submission.",
        },
        Object {
          "name": "Total Queue Length:	infinite",
          "value": "The maximum duration that the queue should take if all its entries were played end-to-end. The queue will automatically close when a submission takes the queue over this limit.",
        },
      ],
      "title": "Queue Limits",
    },
  ],
  "ephemeral": true,
}
`;

exports[`Get Queue Limits shows statistics on queue limits 7`] = `
Object {
  "embeds": Array [
    Object {
      "description": "Use \`/cooldown\` to see your cooldown time",
      "fields": Array [
        Object {
          "name": "Number of Submissions:	42",
          "value": "The maximum number of submissions that each user may submit.",
        },
        Object {
          "name": "Submission Cooldown:	42 seconds",
          "value": "The minimum amount of time that each user must wait between their own submissions.",
        },
        Object {
          "name": "Min Song Length:	0",
          "value": "The minimum duration of a song submission.",
        },
        Object {
          "name": "Max Song Length:	infinite",
          "value": "The maximum duration of a song submission.",
        },
        Object {
          "name": "Total Queue Length:	infinite",
          "value": "The maximum duration that the queue should take if all its entries were played end-to-end. The queue will automatically close when a submission takes the queue over this limit.",
        },
      ],
      "title": "Queue Limits",
    },
  ],
  "ephemeral": true,
}
`;

exports[`Get Queue Limits shows statistics on queue limits 8`] = `
Object {
  "embeds": Array [
    Object {
      "description": "Use \`/cooldown\` to see your cooldown time",
      "fields": Array [
        Object {
          "name": "Number of Submissions:	42",
          "value": "The maximum number of submissions that each user may submit.",
        },
        Object {
          "name": "Submission Cooldown:	42 seconds",
          "value": "The minimum amount of time that each user must wait between their own submissions.",
        },
        Object {
          "name": "Min Song Length:	0",
          "value": "The minimum duration of a song submission.",
        },
        Object {
          "name": "Max Song Length:	42 seconds",
          "value": "The maximum duration of a song submission.",
        },
        Object {
          "name": "Total Queue Length:	infinite",
          "value": "The maximum duration that the queue should take if all its entries were played end-to-end. The queue will automatically close when a submission takes the queue over this limit.",
        },
      ],
      "title": "Queue Limits",
    },
  ],
  "ephemeral": true,
}
`;
